@@ -1,5 +1,5 @@
 /**
- * (C) Copyright IBM Corporation 2020.
+ * (C) Copyright IBM Corporation 2020, 2023.
  *
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not
  * use this file except in compliance with the License. You may obtain a copy of
@@ -58,7 +58,7 @@ public class DependencyGroup {
     }
 
     public void setStripVersion(boolean strip) {
-        this.stripVersion = new Boolean(strip);
+        this.stripVersion = Boolean.valueOf(strip);
     }
     /**
      * Get all the current Dependency to copy.
